@@ -10,6 +10,9 @@ configs:
  armel/config
  armhf/config
 
+[relations]
+headers%gcc-4.8: linux-compiler-@version@-arm
+
 [armmp_build]
 image-file: arch/arm/boot/zImage
 
