@@ -7,6 +7,9 @@ kernel-arch: s390
 bootloaders: s390-tools
 configs: s390x/config
 
+[relations]
+headers%gcc-4.8: linux-compiler-@version@-s390
+
 [s390x_build]
 debug-info: true
 
