@@ -6,6 +6,9 @@ kernel-arch: s390
 [image]
 bootloaders: s390-tools
 
+[relations]
+headers%gcc-4.8: linux-compiler-@version@-s390
+
 [s390x_build]
 debug-info: true
 
