@@ -10,6 +10,8 @@ linux (3.12-1~exp1) UNRELEASED; urgency=low
     - mmap() holds a reference to the union file as well as the branch file
   * [armel/{iop32x,ixp4xx}] Disable BPF_JIT, MEMCG, USER_NS to reduce kernel
     size
+  * [arm,x86,s390,s390x] Introduce linux-compiler meta-packages to allow use
+    of foreign linux-headers packages with a native multilib compiler
 
   [ Thorsten Glaser ]
   * Update m68k config (Closes: #728392):
